vertical alignment issue fixed for home icons

--- a/style/style.css
+++ b/style/style.css
@@ -148,7 +148,7 @@ body{
 .hoverLinks {
     width: 100%;
     height: 100%;
-    display: inline-block;
+    display: flex;
     text-align: center;
 }
 
